# i2nca

./: .gitignore  README.md  automatic_conversion_runner.ipynb  conda_recipe.yml  interactive_Brukertool_runner.ipynb  interactive_Conversion_runner.ipynb  interactive_QC_runner.ipynb  interactive_combiner_runner.ipynb  interactive_conversion_runner.ipynb  pyproject.toml  setup.py
conv_tools/: File_conversion_v1.ipynb  conv_tools.py  environment.yml  installation guide.md  testdata_converter.py  tsf_to_cont_prof_imzML.py  tsf_to_proc_cent_imzML.py  tsf_to_proc_prof_imzML.py
i2nca/: __init__.py  main.py  old_imz  processed_binning_test.py  profile_test.py  test.py
i2nca/brukertools/: __init__.py  tdf_files.py  tdf_tools.py  timsdata.py  tsf_files.py  tsf_tools.py  tsfdata.py
i2nca/convtools/: __init__.py  combiner_tools.py  conv_tools.py  snippet_tools.py
i2nca/dependencies/: __init__.py  dependencies.py
i2nca/dependencies/pyimzml/: __init__.py
i2nca/installations/: basic_conda_recipe.yml  conda_recipe.yml  conda_recipe_nobuilt.yml  conda_requirements  conda_requirements.yml  enviroment_linux.yml  enviroment_linux_nobuilt.yml
i2nca/qctools/: __init__.py  dependencies.py  qc_tools.py  qctools.py  utils.py  visualization.py
i2nca/tests/: test_built.py  test_cli.py  test_combiner.py  test_conv_cc.py  test_conv_cp.py  test_conv_pc.py  test_conv_pp.py  test_conv_snippets.py  test_cutter.py  test_qc.py
i2nca/tests/testdata/: calibrant.csv  cc.imzML  combined_pc.imzML  combined_pc_roi.tsv  cp.imzML  pc.imzML  pp.imzML  regions.tsv
(+18 files in other folders)
