[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "i2nca"
version = "0.3.5"
authors = [
  { name="Jannik Witte" },
]
description = "A MSI workflow package for top-level use and introduction of data preprocessing into workflow engines"
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.1",
    "matplotlib==3.7",
    "scipy>=1.12",
    "m2aia>=0.5",
    "pyimzml>=1.5"
]
[project.urls]
Homepage = "https://github.com/cKNUSPeR/i2nca"
Issues = "https://github.com/cKNUSPeR/i2nca/issues"